crates/qwik-optimizer-oxc/tests/snapshots/example_ts_enums_no_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export enum Thing {
  A,
  B,
}

export const App = component$(() => {
  console.log(Thing.A);
  return (
    <>
      <p class="stuff">Hello Qwik</p>
    </>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export enum Thing {
  A,
  B,
}
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { Thing } from "./test";
export const App_component_XXXXXXXXXXXX = () => {
  console.log(Thing.A);
  return (
    <>
      <p class="stuff">Hello Qwik</p>
    </>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
