crates/qwik-optimizer-oxc/tests/snapshots/example_use_optimization.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useTask$ } from "@qwik.dev/core";
import { CONST } from "const";
export const Works = component$((props) => {
  const { countNested } = useStore({ value: { count: 0 } }).value;
  const countNested2 = countNested;
  const { hello } = countNested2;
  const bye = hello.bye;
  const { ciao } = bye.italian;

  return <div ciao={ciao}>{foo}</div>;
});

=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const Works = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl((props) => {
    const store = useStore({
      value: {
        count: 0,
      },
    });
    return <div ciao={store.value.countNested.hello.bye.italian.ciao}>{foo}</div>;
  }, "Works_component_t45qL4vNGv0"),
);

=== DIAGNOSTICS ===

[]
