crates/qwik-optimizer-oxc/tests/snapshots/issue_117.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});

=== project/test.tsx ===
export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});

=== DIAGNOSTICS ===

[]
