crates/qwik-optimizer-oxc/tests/snapshots/issue_150.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, $ } from "@qwik.dev/core";
import { hola } from "sdfds";

export const Greeter = component$(() => {
  const stuff = useStore();
  return $(() => {
    return (
      <div
        class={{
          foo: true,
          bar: stuff.condition,
          baz: hola ? "true" : "false",
        }}
      />
    );
  });
});

const d = $(() => console.log("thing"));

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Greeter_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_d_XXXXXXXXXXXX");
export const Greeter = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_XXXXXXXXXXXX"),
);
/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "d_XXXXXXXXXXXX");

=== test.tsx_Greeter_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Greeter_component_1_XXXXXXXXXXXX");
export const Greeter_component_XXXXXXXXXXXX = () => {
  const stuff = useStore();
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Greeter_component_1_XXXXXXXXXXXX", [stuff]);
};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_1_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { hola } from "sdfds";
export const Greeter_component_1_XXXXXXXXXXXX = () => {
  const stuff = _captures[0];
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      class: {
        foo: true,
        bar: stuff.condition,
        baz: hola ? "true" : "false",
      },
    },
    null,
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Greeter_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Greeter_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "stuff"
  ]
}
*/

=== test.tsx_d_XXXXXXXXXXXX.js === (ENTRY)
export const d_XXXXXXXXXXXX = () => console.log("thing");

/*
{
  "origin": "test.tsx",
  "name": "d_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_d",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_d_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
