crates/qwik-optimizer-oxc/tests/snapshots/issue_476.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { Counter } from "./counter.tsx";

export const Root = () => {
  return (
    <html>
      <head>
        <meta charset="utf-8" />
        <title>Qwik Blank App</title>
      </head>
      <body>
        <Counter initial={3} />
      </body>
    </html>
  );
};

=== test.tsx ===
import { Counter } from "./counter.tsx";
export const Root = () => {
  return (
    <html>
      <head>
        <meta charset="utf-8" />
        <title>Qwik Blank App</title>
      </head>
      <body>
        <Counter initial={3} />
      </body>
    </html>
  );
};

=== DIAGNOSTICS ===

[]
